# Photonics

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  field_slice_export.cpp  field_slice_export.hpp  geometry_export.cpp  geometry_export.hpp  harminv_runner.cpp  harminv_runner.hpp  high-q-nanocavity.md  lattice_geometry.cpp  lattice_geometry.hpp  main  main.cpp  monitor_suite.cpp  monitor_suite.hpp  mylib.cpp  mylib.hpp  q_analyzer.cpp  q_analyzer.hpp  q_analyzer_test.cpp  run.sh  simulation_config.cpp  simulation_config.hpp  simulation_runner.cpp  simulation_runner.hpp  source_manager.cpp  source_manager.hpp  source_manager_test.cpp  sweep_runner.cpp  sweep_runner.hpp
rawdata/1/: baseline.csv  baseline.json
rawdata/2/: shift_long_Ey_z0_dft.csv  shift_long_Ey_z0_t100.csv  shift_long_Ey_z0_t200.csv  shift_long_Ey_z0_t400.csv  shift_long_flux_spectrum.csv  shift_long_harminv.json  shift_long_run.json  shift_long_ts.csv
rawdata/3/: shift_long2.csv  shift_long2_Ey_z0_dft.csv  shift_long2_Ey_z0_t100.csv  shift_long2_Ey_z0_t200.csv  shift_long2_Ey_z0_t250.csv  shift_long2_harminv.json  shift_long2_run.json  shift_long2_ts.csv
rawdata/4/: shift_long2_Ey_z0_t125.csv  shift_long2_Ey_z0_t37p5.csv  shift_long2_Ey_z0_t75.csv  shift_long2_flux_spectrum.csv  shift_long2_harminv.json  shift_long2_run.json  shift_long2_ts.csv
rawdata/6/: shift_long3_Ey_z0_t125.csv  shift_long3_Ey_z0_t37p5.csv  shift_long3_Ey_z0_t75.csv  shift_long3_flux_spectrum.csv  shift_long3_harminv.json  shift_long3_ts.csv  tmp_debug6.json
tests/: lattice_geometry_test.cpp  monitor_suite_tests.cpp
tools/: plot_field_csv.py  plot_holes.py
