cmake_minimum_required(VERSION 3.28)
project(Photonics)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_RPATH "$ENV{HOME}/.local/lib")
set(CMAKE_INSTALL_RPATH "$ENV{HOME}/.local/lib")

find_package(PkgConfig QUIET)
option(PHOTONICS_ENABLE_MEEP "Enable MEEP (FDTD) integration via pkg-config" ON)
set(PHOTONICS_MEEP_PKGCONFIG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/meep/install/lib/pkgconfig" CACHE PATH "Path to directory containing meep.pc (set after building/installing MEEP)")

add_library(photonics_monitor_suite STATIC monitor_suite.cpp mylib.cpp)
target_include_directories(photonics_monitor_suite PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(Photonics main.cpp)
target_link_libraries(Photonics PRIVATE photonics_monitor_suite)

add_executable(monitor_suite_tests tests/monitor_suite_tests.cpp)
target_link_libraries(monitor_suite_tests PRIVATE photonics_monitor_suite)

if (PHOTONICS_ENABLE_MEEP)
    if (PKG_CONFIG_FOUND)
        if (EXISTS "${PHOTONICS_MEEP_PKGCONFIG_DIR}/meep.pc")
            set(ENV{PKG_CONFIG_PATH} "${PHOTONICS_MEEP_PKGCONFIG_DIR}:$ENV{PKG_CONFIG_PATH}")
        endif()
        pkg_check_modules(MEEP QUIET meep)
        if (MEEP_FOUND)
            target_include_directories(photonics_monitor_suite PUBLIC ${MEEP_INCLUDE_DIRS})
            target_link_libraries(photonics_monitor_suite PUBLIC ${MEEP_LIBRARIES})
            target_compile_options(photonics_monitor_suite PUBLIC ${MEEP_CFLAGS_OTHER})
            if (MEEP_LDFLAGS)
                target_link_options(photonics_monitor_suite PUBLIC ${MEEP_LDFLAGS})
            endif()
            if (MEEP_LDFLAGS_OTHER)
                target_link_options(photonics_monitor_suite PUBLIC ${MEEP_LDFLAGS_OTHER})
            endif()
        else()
            message(STATUS "MEEP not found via pkg-config; build/install it under external/meep (e.g., prefix to external/meep/install) or set PHOTONICS_MEEP_PKGCONFIG_DIR.")
        endif()
    else()
        message(STATUS "pkg-config not found; cannot locate MEEP.")
    endif()
endif()
